refactor: add set csrf token handler
